--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,3 +14,21 @@ div{
         font-family: $font-primary;
     }
 }
+
+ul {
+    text-align: center;
+    li{
+        display: inline-block;
+        list-style: none;
+        a {
+            display: block;
+            padding: 20px;
+            text-decoration: none;
+            background: blue;
+            color: white;
+            &:hover{
+                background: pink;
+            }
+        }
+    }
+}
