--- a/bikcraft-inicio/css/scss/_portfolio.scss
+++ b/bikcraft-inicio/css/scss/_portfolio.scss
@@ -17,7 +17,7 @@
 }
 
 .quote_clientes cite {
-	@include type-1(18);
+	@include tipo-1(18);
 	font-weight: bold;
 	float: right;
 	font-style: normal;
