--- a/bikcraft-inicio/css/scss/_geral.scss
+++ b/bikcraft-inicio/css/scss/_geral.scss
@@ -99,16 +99,32 @@ img {
 	background: $primary-color; /* Amarelo */
 	padding: 15px 0;
 	z-index: 10;
+	@include d(m){
+		position: relative;
+		padding-bottom: 0px;
+	}
 }
 
 .header_menu {
 	text-align: right;
+	@include d(m){
+		text-align: center;
+	}
+}
+
+@include d(m){
+	.header img {
+		margin: 0 auto 10px auto;
+	}
 }
 
 .header_menu ul li {
 	display: inline-block;
 	margin-left: 25px;
 	margin-top: 20px;
+	@include d(m){
+		margin: 5px;
+	}
 }
 
 .header_menu ul li a {
@@ -119,14 +135,26 @@ img {
 	@include tipo-1(14);
 	padding: 10px 0;
 	transition: all .3s ease;
+	@include d(m){
+		border: 4px solid $secundary-color;
+		width: 136px;
+		display: block;
+		float: left;
+	}
 }
 
 .header_menu ul li a:hover {
 	color: $third-color;
+	@include d(m){
+		border-color: $third-color;
+	}
 }
 
 .header_menu ul li a.menu_ativo {
 	color: $third-color;
+	@include d(m){
+		border-color: $third-color;
+	}
 }
 
 /* Introdução */
@@ -139,6 +167,12 @@ img {
 	margin-top: 92px;
 	text-align: center;
 	padding-top: 80px;
+	@include d(m){
+		margin-top: 0px;
+		padding-top: 40px;
+		background: url("../img/bg-mobile.jpg") no-repeat center;
+		background-size: cover;
+	}
 }
 
 .introducao h1 {
@@ -146,6 +180,9 @@ img {
 	color:$third-color;
 	font-weight: bold;
 	text-transform: uppercase;
+	@include d(m){
+		@include tipo-1(36);
+	}
 }
 
 .quote-externo {
@@ -184,6 +221,9 @@ img {
 	text-align: center;
 	color: $third-color;
 	padding-top: 30px;
+	@include d(m){
+		margin-top: 0px;
+	}
 }
 
 .introducao-interna h1 {
@@ -247,6 +287,9 @@ img {
 	padding-top: 40px;
 	text-align: center;
 	clear: both;
+	@include d(m){
+		padding-top: 10px;
+	}
 }
 
 .call p{
@@ -293,6 +336,12 @@ img {
 	top: 209px;
 	right: 162px;
 	z-index: -1;
+	@include d(t){
+		right: 66px;
+	}
+	@include d(m){
+		display: none;
+	}
 }
 
 .qualidade img{
@@ -307,6 +356,9 @@ img {
 .qualidade_lista li {
 	text-align: center;
 	padding: 0 40px;
+	@include d(t){
+		padding: 0 10px;
+	}
 }
 
 .qualidade_lista li h3{
@@ -385,6 +437,18 @@ img {
 	display: block;
 	padding: 10px;
 	transition: all .5s ease;
+	@include d(t){
+		border: 3px solid$primary-color;
+		display: block;
+		padding: 6px;
+	}
+}
+
+@include d(t){
+	.footer_redes ul li a img{
+		width: 26px;
+		height: 26px;
+	}
 }
 
 .footer_redes ul li a:hover {
