--- a/bikcraft-inicio/css/scss/_sobre.scss
+++ b/bikcraft-inicio/css/scss/_sobre.scss
@@ -10,11 +10,18 @@
 .missao_sobre p {
 	@include tipo-1(18);
 	margin-bottom: 1em;
-	padding-right: 60px
+	padding-right: 60px;
+	@include d(m){
+		@include tipo-1(14);
+		padding-right: 0px;
+	}
 }
 
 .missao_sobre ul li {
 	@include tipo-2(18);
+	@include d(m){
+		@include tipo-1(14);
+	}
 }
 
 .foto-equipe {
